unpackaged/main/default/objects/Salesforce_Work_List__c/Salesforce_Work_List__c.object-meta.xml
<CustomObject>
    <description>Holds all work to be done related to Salesforce</description>
    <label>Salesforce Work List</label>
    <nameField>
        <displayFormat>SFDC-{00000}</displayFormat>
        <label>Salesforce Work List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Work Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>