unpackaged/main/default/objects/Salesforce_Work_List__c/fields/EMEA_Task__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this related to EMEA only?</inlineHelpText>
    <label>EMEA Task</label>
    <type>Checkbox</type>
</CustomField>