unpackaged/main/default/objects/Salesforce_Work_List__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EMEA_Task__c</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Position__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>