unpackaged/main/default/objects/Salesforce_Work_List__c/listViews/All_Closed.listView-meta.xml
<ListView>
    <fullName>All_Closed</fullName>
    <columns>EMEA_Task__c</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Position__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>All Closed</label>
    <language>en_US</language>
</ListView>