unpackaged/main/default/objects/Salesforce_Work_List__c/listViews/All_High.listView-meta.xml
<ListView>
    <fullName>All_High</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Position__c</columns>
    <columns>Raised_by__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed,Cancelled - By Requestor,Cancelled - No budget</value>
    </filters>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>High</value>
    </filters>
    <label>All High</label>
    <language>en_US</language>
</ListView>